# rust-redis-urlshortner

./: .gitignore  README.md  docker-compose.yml  package-lock.json
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: errors.rs  handlers.rs  main.rs  responses.rs  services.rs  types.rs
frontend/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
frontend/src/container/: DelUrlButton.tsx  PostUrlContainer.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/service/: delete-url.ts  get-all-urls.ts  post-url.ts
frontend/src/types/: data.d.ts  index.d.ts
frontend/src/ulils/: index.ts
frontend/src/utils/: index.ts
