[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64ct = { version = "1.5.3", features = ["alloc"] }
redis = { version = "0.21.4", features = ["tokio-comp", "connection-manager"] }
anyhow = "1.0"
rust-crypto="0.2.36"
futures-sink = "^0.3.7"
futures-util = { version = "^0.3.7", features = ["sink"] }
